some test for domain class