@@ -8,7 +8,7 @@
 	<name>Takeout Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<properties>
-    <jettyVersion>9.1.2.v20140210</jettyVersion>
+   <!--  <jettyVersion>9.1.2.v20140210</jettyVersion> -->
     <springVersion>3.0.5.RELEASE</springVersion>
   	</properties>
 	<dependencies>
@@ -296,7 +296,34 @@
 		</dependency>
 	</dependencies>
 	
-	<build>
-		<finalName>Takeout</finalName>
+	 <build>
+   	<finalName>Takeout</finalName>
+    <plugins>
+     <!--  <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>${jettyVersion}</version>
+        <configuration>
+        	<webAppConfig>
+				<contextPath>/book</contextPath>
+			</webAppConfig>
+       <stopPort>8087</stopPort>
+      <stopKey>foo</stopKey>
+       <jvmArgs>-Xms1024m -Xms1024m -Xverify:none -XX:+UseParNewGC -XX:+UseConcMarkSweepGC</jvmArgs>
+        </configuration> 
+      </plugin> -->
+    
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+  
+    </plugins>	
 	</build>
 </project>
